@@ -66,7 +66,7 @@ mselement: {
 	elementtype:	4,			// 5-UNDEFINED
 	elementid: 		0,			// ALWAYS must be a STRING (js doesn't support uint64) 
 	elementName:	'',			// element name
-	iconid_off:		19,			// ALWAYS must be a STRING (js doesn't support uint64)
+	iconid_off:		0,			// ALWAYS must be a STRING (js doesn't support uint64)
 	iconid_on:		0,			// ALWAYS must be a STRING (js doesn't support uint64)
 	iconid_unknown:	0,			// ALWAYS must be a STRING (js doesn't support uint64)
 	iconid_maintenance:0,		// ALWAYS must be a STRING (js doesn't support uint64)
@@ -827,6 +827,8 @@ update_mapimg: function(){
 
 set_mapimg: function(resp){
 	this.debug('set_mapimg');
+//--
+//SDI(resp.responseText);
 
 	if(is_null(this.mapimg)){
 		this.mapimg = $('sysmap_img');
