@@ -155,6 +155,8 @@ include_once('include/page_header.php');
 		$links = zbx_toHash($map['links'],'linkid');
 	}
 
+//SDI($selements);
+
 	$expandProblem = ($map['highlight'] > 1)? 0 : 1;
 	$map_info = getSelementsInfo($selements, $expandProblem);
 
