@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-1940] fixed map creation if zabbix doesn't contain images (Aly)
  - [ZBX-1935] remove incorrect item and fix minor typo in the default Windows template (Richlv)
  - [ZBX-1650] allowed to pass "-" (dash) in parameters for "UserParameter" flexible parameters (Dmitry)
  - [ZBX-1923] fixed processing of data sent by 1.4, 1.6 agents not allowing wrong "eventid" values (Dmitry)
